Time display monospace font to prevent shifting

--- a/app/app.css
+++ b/app/app.css
@@ -139,6 +139,8 @@ button {
   margin-left: 1rem;
 }
 .time-display {
+  font-family: monospace;
+  font-size: 0.85rem;
   text-align: right;
   padding: 0 0.25rem;
   background-color: white;
